--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,25 @@
 {
   "cSpell.words": [
+    "Abril",
+    "Alegreya",
+    "Archivo",
+    "CARDO",
+    "Fatface",
+    "Fira",
+    "Fjalla",
+    "Lato",
+    "Merriweather",
+    "Noto",
+    "Nunito",
+    "Playfair",
+    "Rakkas",
+    "Roboto",
+    "Ruhl",
+    "Titillium",
+    "Varela",
+    "Vollkorn",
+    "Yatra",
+    "monospace",
     "swipeable"
   ]
 }
